clusters/production/storage/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.homelab.cs-ol.de`)
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
